--- a/estilo.style.css
+++ b/estilo.style.css
@@ -1,14 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&family=Tsukimi+Rounded&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive
+}
+
 * {
     margin: 0px;
-    padding: 0px
+    padding: 0px;
+    font-size: 1em
 
 }
 
 html, body {
     background-color:darkgray;
-    min-height: 100vh
+    min-height: 100vh;
+    font-family: var(--fonte1)
 }
 
 header {
@@ -19,7 +29,9 @@ header {
 
 header > h1 {
     padding-top: 50px;
-    font-variant: small-caps
+    font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vh
 }
 
 header > p {
@@ -57,10 +69,13 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
-    padding-left: 30px
+    padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 5vw
 }
 
 section.imagem > p {
     background-color: rgb(0, 0, 0, 0.253);
-    width: 400px
+    display: inline-block;
+    padding: 5px
 }
