--- a/estilo.style.css
+++ b/estilo.style.css
@@ -62,7 +62,11 @@ section.normal {
 
 section.imagem {
     background-color: rgb(51, 51, 51);
-    color:white
+    color:white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgb(0, 0, 0, 0.473);
+    background-attachment: fixed
 }
 
 section {
@@ -75,7 +79,23 @@ section {
 }
 
 section.imagem > p {
-    background-color: rgb(0, 0, 0, 0.253);
+    background-color: rgb(0, 0, 0, 0.514);
     display: inline-block;
-    padding: 5px
+    padding: 5px;
+    text-shadow: 1px 1px 0px black;
+    background-size: cover
+}
+
+section > p {
+    padding-bottom: 2em
+}
+
+section#img01 {
+    background-image: url('../projeto-html-css/pacote-d012/imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover
+}
+
+section#img02 {
+    background-image: url('../projeto-html-css/pacote-d012/imagens/background002.jpg')
 }
